--- a/components/Search/SearchResults/SearchResult/styles.module.scss
+++ b/components/Search/SearchResults/SearchResult/styles.module.scss
@@ -97,8 +97,8 @@
     align-self: center;
     margin-left: auto;
     font-size: 0;
-    background-image: url(../../../../public/images/newWideArrowDown.svg);
-    background-size: contain;
+    background-image: url(../../../../public/images/angleDown.svg);
+    background-size: 18px auto;
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
